--- a/templates/blog.html
+++ b/templates/blog.html
@@ -11,7 +11,7 @@
     <div class="container">
         <aside class="sidebar">
             <form method="GET" action="{% url 'home' %}">
-                <input type="text" name="tag_search" placeholder="Search by tags" value="{{ tag_search }}">
+                <input type="text" name="tag_search" placeholder="Search by tags" value="{{ tag_sear }}">
                 <input type="text" name="search" placeholder="Search blogs..." value="{{ search_query }}">
                 <button type="submit">Search</button>
             </form>
